# RAL_LGN_KIN

./: CMakeLists.txt  LICENSE  README.md  aggregate_all_machines.sh  bench_stats.py  exec.md  install_lgn_bench.sh  install_lgn_bench_arm.sh  package.xml  run_lgn_bench.sh  run_lgn_bench_single.sh  run_lgn_ik_focused.sh
URDFs/: amazing_hand_right.urdf  two_segment.urdf
benchmarks/: bench_lgn_kdl.cpp  bench_pinocchio_direct.cpp  bench_v2.cpp  perf_avx2.sh
demo/: main.cpp
include/lgn/: collision_loader.hpp  contacts.hpp  core.hpp  dynamics.hpp  ik_solver.hpp  kinematic_tree.hpp  mjcf_loader.hpp  urdf_loader.hpp  viz.hpp
launch/: full_hand.launch.py  hand_ik.launch.py  virtual_sensor.launch.py
scripts/: compute_stats.py  compute_stats_10x.py  compute_stats_cross_machine.py  computre_stats_multi.py  plot_stats_10x.py  stats.py
sim/: scenarios.md  twin_sim ii.cpp  twin_sim.cpp  twin_sim_i.cpp  twin_sim_iii.cpp  twin_sim_iv.cpp  twin_sim_py.cpp  twin_sim_render.py  twin_sim_v.cpp
sim/archiv/: twin_sim_both_bounce.cpp  twin_sim_lgn_bounce.cpp  twin_sim_wave.cpp  twin_sim_works.cpp
src/: hand_ik_node.cpp  virtual_sensor_node.cpp
test/: test_correctness.cpp  test_roundtrip.cpp
